<resources>
    <string name="app_name">t2b</string>
    <!-- Strings related to login -->
    <string name="prompt_phone_number">0986866886</string>
    <string name="prompt_password">*********</string>
    <string name="action_sign_in">Go</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signin_title">ĐĂNG NHẬP</string>
    <string name="post">Đăng bài</string>
    <string name="news">Tin tức</string>
    <string name="contract">Hợp đồng hoa hồng tư vấn</string>
    <string name="website">Website</string>
    <string name="history">Lịch sử giao dịch</string>
    <string name="document">Lưu tài liệu</string>
    <string name="tutorial">Hướng dẫn</string>
    <string name="fanpage">Fanpage</string>
</resources>
